samples/_failures_safe/1761426429_2d4593_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7727d406.c: In function ‘main’:
./samples/SAFE/__tmp_7727d406.c:164:5: error: expected declaration or statement at end of input
  164 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
